--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 VERSION[2.13.0][2021/11/02]
 
-* Add Ravenous Misshapen Spectre (LocalIdentity)
+Test pull request
 * Add Pale Seraphim Spectre (LocalIdentity)
 * Add Pale Angel Spectre (Kayella)
 * Add Demon Harpy Spectre (Kayella)
